<resources>
    <string name="app_name"><font color='#FFD900'>Yoga</font><font color='#FFFFFF'>Mantra</font></string>

    <string name="network_error_message">Please check your internet connection and try again!</string>
    <string name="new_cases">New Cases</string>
    <string name="sort">Sort</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Benifits</string>
    <string name="tab_3">Tips</string>
    <string name="ok_text">Ok</string>
    <string name="training_plan">Training Plan</string>
    <string name="banner_ad_unit_id">ca-app-pub-4973836225240624/2110317192</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="scroll">Scroll</string>
    <string name="reminder">Reminder</string>
    <string name="door">Door</string>
    <string name="restart_progress">Restart Progress!</string>
    <string name="share">Share</string>
    <string name="rate">Rate us</string>
    <string name="feedback">Feedback</string>
    <string name="trikonasana">TRIKONASANA</string>
</resources>
