<?xml version="1.0" encoding="utf-8"?>
<com.mindinventory.midrawer.MIDrawerView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    app:sliderType="doorIn"
    tools:openDrawer="start">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@drawable/background_gradient"
        android:fitsSystemWindows="false">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_nav"
            android:layout_width="match_parent"
            android:scaleType="centerCrop"
            android:alpha="0.6"
            android:src="@drawable/yoga_splash"
            android:layout_height="250dp"/>

        <View
            android:layout_width="match_parent"
            android:background="#59070707"
            android:layout_height="250dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:layout_marginTop="35dp"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:textColor="@android:color/white" />



        <LinearLayout
            android:layout_below="@+id/iv_nav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/nav_training_plan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_workout"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/training_plan"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />

            <TextView
                android:id="@+id/nav_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_reminder"
                android:drawablePadding="10dp"
                android:drawableTint="@color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/reminder"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />

         <!--   <TextView
                android:id="@+id/nav_restart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/restart_progress"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />-->

            <TextView
                android:id="@+id/nav_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_menu_set_as"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/share"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />
            <TextView
                android:id="@+id/nav_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_review"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/rate"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />
            <TextView
                android:id="@+id/nav_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_feedback"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/white"
                android:gravity="center_vertical"
                android:padding="20dp"
                android:textStyle="bold"
                android:text="@string/feedback"
                android:textColor="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/drawer_bg" />
        </LinearLayout>
    </RelativeLayout>
      </ScrollView>
    </com.google.android.material.navigation.NavigationView>

</com.mindinventory.midrawer.MIDrawerView>